# warehouse-gui

./: INSTRUCTIONS.txt  build_windows.py  main.py  pyproject.toml  seed_data.py  test_enum.py  warehouse.db  warehouse_backup_RESET_20260211_142617.db
.github/workflows/: build_windows.yml
tests/: test_backend_manual.py  test_backup_mechanism.py  test_materials_manual.py
warehouse/: controllers.py  controllers_log.py  controllers_material.py  database.py  models.py  utils.py
warehouse/ui/: colors.py  components.py  main_window.py  material_form.py  theme.py  user_form.py
warehouse/ui/tabs/: dashboard_tab.py  logs_tab.py  materials_tab.py  settings_tab.py  users_tab.py  withdrawals_tab.py
